--- a/public/css/adminprofile.css
+++ b/public/css/adminprofile.css
@@ -502,7 +502,7 @@ main .recent_order a{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 29rem;
+  margin-left: 28rem;
   margin-top: 2rem;
 }
 
@@ -524,6 +524,10 @@ main .recent_order a{
 
 .admin-password{
   margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .admin-password-input{
@@ -540,15 +544,19 @@ main .recent_order a{
   height: 2rem;
   font-size: 16px;
   font-weight: bolder;
-  background: none;
+  border: 2px solid var(--clr-primary);
+  background: var(--clr-primary);
   border-radius: 5px;
   color: white;
   transition: 0.3s ease-out;
   cursor: pointer;
+  margin-top: 17px;
 }
 
 .admin-password-button:hover{
   color: var(--clr-primary);
+  background: none;
+
 }
 
 
