--- a/public/css/mycommunity.css
+++ b/public/css/mycommunity.css
@@ -1389,9 +1389,15 @@ transition: all 0.3s ease;
   text-align: center;
 }
 
+.share-options{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .share-options a {
   display: block;
-  margin: 10px 0;
+  margin: 6px 0;
   color: #FF4500;
   text-decoration: none;
   font-size: 16px;
