--- a/public/css/admincontent.css
+++ b/public/css/admincontent.css
@@ -450,8 +450,9 @@ Right Side
 
 }
 
-.profile-img2{
+.profile-img2 img{
   position: relative;
+  object-fit: cover;
   width: 25px;
   height: 25px;
   flex-shrink: 0;
@@ -488,6 +489,7 @@ Right Side
 
 .post-wall h3{
     color: #868998;
+    padding-bottom: 10px;
     width: 702px;
     font-size: 20px;
     margin-left: 23px;
@@ -539,6 +541,7 @@ Right Side
 .main-user-comments-zero-div{
   font-size: 23px;
   margin-top: 8px;
+  color: #ffff;
   /* margin-bottom: 8px; */
   margin-bottom: -13px;
 }
@@ -623,9 +626,42 @@ Right Side
     /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
     margin-left: 25px;
     margin-top: 10px;
-    padding-bottom: 8px;
+    padding-bottom: 18px;
     font-size: 16px;
     width: 791px;
     height: auto;
 }
   
+
+.post-wall-admin{
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 3px;
+  color: #9fa5b5;
+  background-color: #ff5200a6;
+}
+
+.post-wall-member{
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 3px;
+  color: #9fa5b5;
+  background-color: #6f2cf7;
+}
+
+
+.not-found {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center; 
+  text-align: center; 
+}
+
+.not-found h3{
+    margin-top: -6px;
+    color: #ffff;
+}
