--- a/public/css/create_community.css
+++ b/public/css/create_community.css
@@ -1719,7 +1719,9 @@ small{
 }
 
 .main-h3{
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 	text-align: left;
 	margin-bottom: 15px;
 	color: white;
@@ -1747,6 +1749,74 @@ small{
 #main-h3-input-first::placeholder{
   color: #FF4D04;
 }
+
+
+.delete-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgb(215, 0, 0);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  gap: 1px;
+}
+
+.svgIcon {
+  width: 12px;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.delete-button:hover {
+  width: 140px;
+  border-radius: 50px;
+  transition-duration: 0.3s;
+  background-color:  rgb(215, 0, 0);
+  align-items: center;
+  gap: 0;
+}
+
+.delete-button:hover .bin-bottom {
+  width: 50px;
+  transition-duration: 0.3s;
+  transform: translateY(60%);
+}
+.bin-top {
+  transform-origin: bottom right;
+}
+.delete-button:hover .bin-top {
+  width: 50px;
+  transition-duration: 0.3s;
+  transform: translateY(60%) rotate(160deg);
+}
+.delete-button:before {
+  position: absolute;
+  top: -20px;
+  content: "Delete";
+  color: white;
+  transition-duration: 0.3s;
+  font-size: 2px;
+}
+
+.delete-button:hover::before {
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(35px);
+  transition-duration: 0.3s;
+}
+
 
 .main-form1-text{
   width: 450px;
