--- a/public/css/adminhome.css
+++ b/public/css/adminhome.css
@@ -759,6 +759,9 @@ input:checked ~ .slider {
 
 
 .main_wrapper {
+  position: absolute;
+  top: 19rem;
+  left: 44rem;
   display: flex;
   align-items: center;
   justify-content: center;
