--- a/public/css/create_community.css
+++ b/public/css/create_community.css
@@ -1752,8 +1752,12 @@ small{
 
 
 .delete-button {
-  width: 50px;
-  height: 50px;
+  position: absolute;
+  z-index: 2;
+  top: 41rem;
+  left: 23rem;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   background-color: rgb(215, 0, 0);
   border: none;
