--- a/public/css/editprofile.css
+++ b/public/css/editprofile.css
@@ -1013,7 +1013,7 @@ body.dark-theme {
   gap: 19px;
   background-color: #23282c;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: auto;
   transition: all 0.3s ease;
   z-index: 1000;
 }
@@ -1021,6 +1021,7 @@ body.dark-theme {
 .section-dropdown3.show {
   opacity: 1;
   visibility: visible;
+  pointer-events: auto;
 }
 
 
