--- a/public/css/explore.css
+++ b/public/css/explore.css
@@ -1008,7 +1008,7 @@ body.dark-theme {
   gap: 19px;
   background-color: #23282c;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: auto;
   transition: all 0.3s ease;
   z-index: 1000;
 }
@@ -1016,6 +1016,7 @@ body.dark-theme {
 .section-dropdown3.show {
   opacity: 1;
   visibility: visible;
+  pointer-events: auto;
 }
 
 
