--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -999,7 +999,7 @@ transition: all 0.3s ease;
   gap: 19px;
   background-color: #23282c;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: auto;
   transition: all 0.3s ease;
   z-index: 1000;
 }
@@ -1007,6 +1007,7 @@ transition: all 0.3s ease;
 .section-dropdown3.show {
   opacity: 1;
   visibility: visible;
+  pointer-events: auto;
 }
 
 
