--- a/public/css/user_view_post.css
+++ b/public/css/user_view_post.css
@@ -979,7 +979,7 @@ transition: all 0.3s ease;
   gap: 19px;
   background-color: #23282c;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: auto;
   transition: all 0.3s ease;
   z-index: 1000;
 }
@@ -987,6 +987,7 @@ transition: all 0.3s ease;
 .section-dropdown3.show {
   opacity: 1;
   visibility: visible;
+  pointer-events: auto;
 }
 
 
