--- a/public/css/viewmemcom.css
+++ b/public/css/viewmemcom.css
@@ -1000,13 +1000,14 @@ transition: all 0.3s ease;
   gap: 19px;
   background-color: #23282c;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: auto;
   transition: all 0.3s ease;
   z-index: 1000;
 }
 
 .section-dropdown3.show {
   opacity: 1;
+  pointer-events: auto;
   visibility: visible;
 }
 
