--- a/public/css/explore.css
+++ b/public/css/explore.css
@@ -1256,7 +1256,7 @@ body.dark-theme {
   visibility: hidden;
   transition: opacity 0.5s ease, visibility 0s 0.5s;
   position: absolute;
-  height: 100%;
+  /* height: 100%; */
   z-index: 0;
 }
 
@@ -1380,8 +1380,8 @@ div.identifier-middle{
 
 .not-found {
   position: relative;
-  left: 291px;
-  top: 75px;
+  left: 408px;
+  top: 177px;
   display: flex;
   flex-direction: column; 
   align-items: center; 
